[package]
name = "prison-probe"
version = "0.1.0"
edition = "2024"
authors = ["prison-probe contributors"]
description = "A local-first network privacy auditing tool"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# TLS & networking
rustls = { version = "0.23", default-features = false }
webpki-roots = "0.26"

# DNS
hickory-resolver = { version = "0.25", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data & time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Regex
regex = "1"

# Storage
rusqlite = { version = "0.34", features = ["bundled"] }

# Async trait
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Table output
tabled = "0.18"

[profile.release]
lto = true
opt-level = 3
strip = true
