[workspace]
members = ["crates/*"]
exclude = []
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["prison-probe contributors"]
description = "A local-first network privacy auditing tool"
license = "MIT"

[workspace.dependencies]
# Core
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Network
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23", default-features = false }
webpki-roots = "0.26"
hickory-resolver = { version = "0.25", features = ["tokio"] }

# Misc
rand = "0.8"
regex = "1"

# Storage
rusqlite = { version = "0.34", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
tabled = "0.18"
