[package]
name = "prison-probe"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "pp"
path = "src/main.rs"

[dependencies]
prison-probe-core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tabled = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
