[package]
name = "prison-probe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
hickory-resolver = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
local-ip-address = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }
x509-parser = { workspace = true }
rusqlite = { workspace = true }
