[package]
name = "prison-probe-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
prison-probe-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }
ring = { workspace = true }
